@@ -3,6 +3,11 @@
 	* bmc-device/bmc-device.c (write_fru): Fix invalid type in
 	pstdout_printf().
 
+	* libfreeipmi/sel/ipmi-sel-string-intel-e52600v3-common.c
+	(sel_string_output_intel_e52600v3_event_data3_discrete_oem,
+	(sel_string_output_intel_e52600v3_event_data3_discrete_oem):
+	Rename local variable that masked outside scope variable name.
+
 2020-01-07 Albert Chu <chu11@llnl.gov>
 
 	Mountains of minor fixes found by lgtm.com
